--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Document</title>
+    <title>Chord Voicings Exercise</title>
 </head>
 <body>
     <section class="start">
@@ -88,40 +88,40 @@
     <audio class='D2 note' data-num='1' data-note='D' data-color='white' src="/sounds/D2.flac"></audio>
     <audio class='D#2 note' data-num='1' data-note='D#' src="/sounds/DSharp2.flac"></audio>
     <audio class='E2 note' data-num='2' data-note='E' data-color='white' src="/sounds/E2.flac"></audio>
-    <!--5--><audio class='F2 note' data-note='F' data-num='3' data-color='white' src="/sounds/F2.flac"></audio>
+    <audio class='F2 note' data-note='F' data-num='3' data-color='white' src="/sounds/F2.flac"></audio>
     <audio class='F#2 note' data-num='3' data-note='F#' src="/sounds/FSharp2.flac"></audio>
-    <!--7--><audio class='G2 note' data-num='4' data-note='G' data-color='white' src="/sounds/G2.flac"></audio>
+    <audio class='G2 note' data-num='4' data-note='G' data-color='white' src="/sounds/G2.flac"></audio>
     <audio class='G#2 note' data-num='4' data-note='G#' src="/sounds/GSharp2.flac"></audio>
     <audio class='A2 note' data-num='5' data-note='A' data-color='white' src="/sounds/A2.flac"></audio>
     <audio class='A#2 note' data-num='5' data-note='A#' src="/sounds/BFlat2.flac"></audio>
     <audio class='B2 note' data-num='6' data-note='B' data-color='white' src="/sounds/B2.flac"></audio>
-    <!--12--><audio class='C3 note' data-num='7' data-note='C' data-color='white' src="/sounds/C3.flac"></audio>
+    <audio class='C3 note' data-num='7' data-note='C' data-color='white' src="/sounds/C3.flac"></audio>
     <audio class='C#3 note' data-num='7' data-note='C#' src="/sounds/CSharp3.flac"></audio>
-    <!--14--><audio class='D3 note' data-num='8' data-note='D' data-color='white' src="/sounds/D3.flac"></audio>
+    <audio class='D3 note' data-num='8' data-note='D' data-color='white' src="/sounds/D3.flac"></audio>
     <audio class='D#3 note' data-num='8' data-note='D#' src="/sounds/DSharp3.flac"></audio>
     <audio class='E3 note' data-num='9' data-note='E' data-color='white' src="/sounds/E3.flac"></audio>
     <audio class='F3 note' data-num='10' data-note='F' data-color='white' src="/sounds/F3.flac"></audio>
     <audio class='F#3 note' data-num='10' data-note='F#' src="/sounds/FSharp3.flac"></audio>
-    <!--19--><audio class='G3 note' data-num='11' data-note='G' data-color='white' src="/sounds/G3.flac"></audio>
+    <audio class='G3 note' data-num='11' data-note='G' data-color='white' src="/sounds/G3.flac"></audio>
     <audio class='G#3 note' data-num='11' data-note='G#' src="/sounds/GSharp3.flac"></audio>
     <audio class='A3 note' data-num='12' data-note='A' data-color='white' src="/sounds/A3.flac"></audio>
     <audio class='A#3 note' data-num='12' data-note='A#' src="/sounds/BFlat3.flac"></audio>
-    <!--23--><audio class='B3 note' data-num='13' data-note='B' data-color='white' src="/sounds/B3.flac"></audio>
-    <!--24--><audio class='C4 note' data-num='14' data-note='C' data-color='white' src="/sounds/C4.flac"></audio>
+    <audio class='B3 note' data-num='13' data-note='B' data-color='white' src="/sounds/B3.flac"></audio>
+    <audio class='C4 note' data-num='14' data-note='C' data-color='white' src="/sounds/C4.flac"></audio>
     <audio class='C#4 note' data-num='14' data-note='C#' src="/sounds/CSharp4.flac"></audio>
     <audio class='D4 note' data-num='15' data-note='D' data-color='white' src="/sounds/D4.flac"></audio>
     <audio class='D#4 note' data-num='15' data-note='D#' src="/sounds/DSharp4.flac"></audio>
     <audio class='E4 note' data-num='16' data-note='E' data-color='white' src="/sounds/E4.flac"></audio>
     <audio class='F4 note' data-num='17' data-note='F' data-color='white' src="/sounds/F4.flac"></audio>
     <audio class='F#4 note' data-num='17' data-note='F#' src="/sounds/FSharp4.flac"></audio>
-    <!--31--><audio class='G4 note' data-num='18' data-note='G' data-color='white' src="/sounds/G4.flac"></audio>
+    <audio class='G4 note' data-num='18' data-note='G' data-color='white' src="/sounds/G4.flac"></audio>
     <audio class='G#4 note' data-num='18' data-note='G#' src="/sounds/GSharp4.flac"></audio>
     <audio class='A4 note' data-num='19' data-note='A' data-color='white' src="/sounds/A4.flac"></audio>
     <audio class='A#4 note' data-num='19' data-note='A#' src="/sounds/BFlat4.flac"></audio>
     <audio class='B4 note' data-num='20' data-note='B' data-color='white' src="/sounds/B4.flac"></audio>
-    <!--37--><audio class='C5 note' data-num='21' data-note='C' data-color='white' src="/sounds/C5.flac"></audio>
+    <audio class='C5 note' data-num='21' data-note='C' data-color='white' src="/sounds/C5.flac"></audio>
     <audio class='C#5 note' data-num='21' data-note='C#'  src="/sounds/CSharp5.flac"></audio>
-    <!--38--><audio class='D5 note' data-num='22' data-note='D' data-color='white' src="/sounds/D5.flac"></audio>
+    <audio class='D5 note' data-num='22' data-note='D' data-color='white' src="/sounds/D5.flac"></audio>
     <audio class='D#5 note' data-num='22' data-note='D#' src="/sounds/DSharp5.flac"></audio>
     <audio class='E5 note' data-num='23' data-note='E' data-color='white' src="/sounds/E5.flac"></audio>
     <audio class='F5 note' data-num='24' data-note='F' data-color='white' src="/sounds/F5.flac"></audio>
