changed styling, separated scripts files, commented code

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="start__options-container">
                 <h3 class="start__options-header-three">Possible Chord Qualities:<span class ='start__options--qualities'><span class='start__options-chosen'></span></span></h3>
                 <div class="start__options-btn-container">
-                <button class="start__options-btn--qualities btn">Major</button>
-                <button class="start__options-btn--qualities btn">Minor</button>
-                <button class="start__options-btn--qualities btn">Diminished</button>
-                <button class="start__options-btn--qualities btn">Augmented</button>
+                <button class="start__options-btn--qualities btn" data-active="off">Major</button>
+                <button class="start__options-btn--qualities btn" data-active="off">Minor</button>
+                <button class="start__options-btn--qualities btn" data-active="off">Diminished</button>
+                <button class="start__options-btn--qualities btn" data-active="off">Augmented</button>
             </div>
             </div>
             <div class="start__options-container">
@@ -134,6 +134,8 @@
     <audio class='C6 note' data-num='28' data-note='C' data-color='white' src="/sounds/C6.flac"></audio>
     <audio class='C#6 note' data-num='29' data-note='C#' src="/sounds/CSharp6.flac"></audio>
     
-    <script src="main.js"></script>
+    <script src="/scripts/music.js"></script>
+    <script src="/scripts/canvas.js"></script>
+    <script src="/scripts/quiz.js"></script>
 </body>
 </html>
