--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     <audio class='C6 note' data-num='28' data-note='C' data-color='white' src="/sounds/C6.flac"></audio>
     <audio class='C#6 note' data-num='29' data-note='C#' src="/sounds/CSharp6.flac"></audio>
     
-    <script src="/scripts/music.js"  type="text/javascript"></script>
-    <script src="/scripts/canvas.js" type="text/javascript"></script>
-    <script src="/scripts/quiz.js" type="text/javascript"></script>
+    <script src="./scripts/music.js"  type="text/javascript"></script>
+    <script src="./scripts/canvas.js" type="text/javascript"></script>
+    <script src="./scripts/quiz.js" type="text/javascript"></script>
 </body>
 </html>
