--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section class="start">
+        <div class="btn-test">click</div>
         <div class="start__container">
             <div class="start__exercise-container">
                 <h1 class="start__exercise-title">Chord Voicings Exercise</h1>
