--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section class="start">
-        <div class="btn-test">click</div>
+        <div class="btn-test">clicker</div>
         <div class="start__container">
             <div class="start__exercise-container">
                 <h1 class="start__exercise-title">Chord Voicings Exercise</h1>
@@ -134,7 +134,7 @@
     <audio class='B5 note' data-num='27' data-color='white' data-note='B' src="./sounds/B5.mp3"></audio>
     <audio class='C6 note' data-num='28' data-note='C' data-color='white' src="./sounds/C6.mp3"></audio>
     <audio class='C#6 note' data-num='28' data-note='C#' src="./sounds/CSharp6.mp3"></audio>
-    
+    <audio src="./sounds/piano-spritesheet.mp3" class="idk"></audio>
     <script src="./data/data.js"></script>
     <script src="./scripts/music.js"  type="text/javascript"></script>
     <script src="./scripts/canvas.js" type="text/javascript"></script>
