--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </div>
         </div>
     </section>
+    <!-- <script src="./script.js"></script> -->
     <script src="./data/data.js"></script>
     <script src="./scripts/music.js"  type="text/javascript"></script>
     <script src="./scripts/canvas.js" type="text/javascript"></script>
